# py_math_opt_book

./: 1_1_Mathematical_Optimization.ipynb  1_2_Solving_Problems.ipynb  1_3_How_to_Solve.ipynb  2_1_Approach_to_Problem.ipynb  2_2_Linear_Optimization_Problem.ipynb  2_3_Linear_Mathematical_Model.ipynb  2_4_Characteristics_of_Constraints.ipynb  2_5_Solution_Status.ipynb  2_6_Solver.ipynb  2_7_Cale_and_Cookie.ipynb  3_2_Model.ipynb  3_3_Check.ipynb  3_3_check.ipynb  3_4_Solve.ipynb  3_4_solve.ipynb  3_5_mip.ipynb  3_6_Example.ipynb  3_6_example.ipynb  4_1_Vec_Operation.ipynb  4_1_vec_operation.ipynb  4_2_Vec_Ver.ipynb  4_2_vec_ver.ipynb  4_3_Astype.ipynb  4_3_astype.ipynb  4_4_xsum.ipynb  4_5_Inner_Product.ipynb  4_5_inner_product.ipynb  4_6_Vec_Model.ipynb  4_6_vec_model.ipynb  4_7_Vec_Exercise.ipynb  5_1_Mixed_Integer_Optimization.ipynb  5_2_Mixed_Integer_Optimization_Example.ipynb  5_3_Mixed_Integer_Optimization_Vec.ipynb  5_4_Mixed_Integer_Optimization_Problem_with_0-1_Integer_Variables.ipynb  5_5_Mixed_Integer_Optimization_Problem_with_0-1_Integer_Variables-2.ipynb  5_6_Knapsack_Problem.ipynb  5_7_Theme_Park_Attraction_Optimization_0-1_Knapsack_Problem.ipynb  README.md  pyproject.toml
