[project]
name = "py-math-opt-book"
version = "0.1.0"
description = "Learning Mathematical Optimization with Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "mip-tool>=0.6.3",
    "mip>=1.15.0",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 119
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # raise ... from ... not set errors
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
